--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,27 @@
 /*  your css code here. If applicable */
+
+.container{
+    width:300px;
+    height:300px;
+    border:2px solid black;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#line{
+    /* border:2px solid black; */
+    width:200px;
+    height:2px;
+    background-color: black;
+    transform:rotate(50deg);
+    animation: move 5s linear infinite forwards;
+}
+@keyframes move{
+    from{
+        transform:rotate(0deg);
+    }
+    to{
+        transform:rotate(360deg);
+    }
+}
